minor fixes applied to models (refelcted in documentation) and add cors middleware
